--- a/项目1/contact.html
+++ b/项目1/contact.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8" />
   <title>Jay Skript And The Domsters</title>
 	  <script src="scripts/modernizr-1.6.min.js"></script>
-	  <link rel="stylesheet" media="screen" href="styles/basic.css" />
+	  <link rel="stylesheet" media="screen" href="styles/typography.css" />
+	  <link rel="stylesheet" media="screen" href="styles/color.css" />
+	  <link rel="stylesheet" media="screen" href="styles/layout.css" />
 </head>
 <body>
   <header>
