--- a/项目1/photos.html
+++ b/项目1/photos.html
@@ -14,7 +14,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html">about</a></li>
         <li><a href="photos.html">Photos</a></li>
         <li><a href="live.html">Live</a></li>
         <li><a href="contact.html">Contact</a></li>
