--- a/项目1/index.html
+++ b/项目1/index.html
@@ -14,9 +14,9 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="About.html">About</a></li>
         <li><a href="photos.html">Photos</a></li>
-        <li><a href="live.html">Live</a></li>
+        <li><a href="Live.html">Live</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
