--- a/项目1/photos.html
+++ b/项目1/photos.html
@@ -13,11 +13,11 @@
     <img src="images/logo.gif" alt="Jay Skript and the Domsters" />
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="About.html">About</a></li>
-        <li><a href="photos.html">Photos</a></li>
-        <li><a href="live.html">Live</a></li>
-        <li><a href="contact.html">Contact</a></li>
+		        <li><a href="index.html">Home</a></li>
+		        <li><a href="About.html">About</a></li>
+		        <li><a href="photos.html">Photos</a></li>
+		        <li><a href="Live.html">Live</a></li>
+		        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
