--- a/项目1/photos.html
+++ b/项目1/photos.html
@@ -4,20 +4,21 @@
   <meta charset="utf-8" />
   <title>Jay Skript And The Domsters: Photos</title>
   <script src="scripts/modernizr-1.6.min.js"></script>
-  	  <link rel="stylesheet" media="screen" href="styles/typography.css" />
-	  <link rel="stylesheet" media="screen" href="styles/color.css" />
-	  <link rel="stylesheet" media="screen" href="styles/layout.css" />
+   <script src="scripts/modernizr-1.6.min.js"></script>
+	  <link rel="stylesheet" media="screen" href="styles/typography.css" />
+<link rel="stylesheet" media="screen" href="styles/color.css" />
+<link rel="stylesheet" media="screen" href="styles/layout.css" />
 </head>
 <body>
 <header>
     <img src="images/logo.gif" alt="Jay Skript and the Domsters" />
     <nav>
       <ul>
-		        <li><a href="index.html">Home</a></li>
-		        <li><a href="About.html">About</a></li>
-		        <li><a href="photos.html">Photos</a></li>
-		        <li><a href="Live.html">Live</a></li>
-		        <li><a href="contact.html">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="photos.html">Photos</a></li>
+        <li><a href="live.html">Live</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
