--- a/项目1/template.html
+++ b/项目1/template.html
@@ -4,9 +4,10 @@
   <meta charset="utf-8" />
   <title>Jay Skript And The Domsters</title>
 	  <script src="scripts/modernizr-1.6.min.js"></script>
+	  <script src="scripts/modernizr-1.6.min.js"></script>
 	  <link rel="stylesheet" media="screen" href="styles/typography.css" />
-	  <link rel="stylesheet" media="screen" href="styles/color.css" />
-	  <link rel="stylesheet" media="screen" href="styles/layout.css" />
+<link rel="stylesheet" media="screen" href="styles/color.css" />
+<link rel="stylesheet" media="screen" href="styles/layout.css" />
 </head>
 <body>
   <header>
@@ -14,9 +15,9 @@
 	<nav>
 	      <ul>
 		        <li><a href="index.html">Home</a></li>
-		        <li><a href="About.html">About</a></li>
+		        <li><a href="about.html">About</a></li>
 		        <li><a href="photos.html">Photos</a></li>
-		        <li><a href="Live.html">Live</a></li>
+		        <li><a href="live.html">Live</a></li>
 		        <li><a href="contact.html">Contact</a></li>
 	      </ul>
              </nav>
