--- a/项目1/contact.html
+++ b/项目1/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Jay Skript And The Domsters</title>
-	  <script src="scripts/modernizr-1.6.min.js"></script>
+	  
 	   <script src="scripts/modernizr-1.6.min.js"></script>
 	  <link rel="stylesheet" media="screen" href="styles/typography.css" />
 <link rel="stylesheet" media="screen" href="styles/color.css" />
@@ -17,7 +17,7 @@
 		        <li><a href="index.html">Home</a></li>
 		        <li><a href="about.html">About</a></li>
 		        <li><a href="photos.html">Photos</a></li>
-		        <li><a href="live.html">Live</a></li>
+		        <li><a href="Live.html">Live</a></li>
 		        <li><a href="contact.html">Contact</a></li>
 	      </ul>
              </nav>
