--- a/项目1/contact.html
+++ b/项目1/contact.html
@@ -3,17 +3,16 @@
 <head>
   <meta charset="utf-8" />
   <title>Jay Skript And The Domsters</title>
-	  
-	   <script src="scripts/modernizr-1.6.min.js"></script>
-	  <link rel="stylesheet" media="screen" href="styles/typography.css" />
+	     <script src="scripts/modernizr-1.6.min.js"></script>
+	 <link rel="stylesheet" media="screen" href="styles/typography.css" />
 <link rel="stylesheet" media="screen" href="styles/color.css" />
 <link rel="stylesheet" media="screen" href="styles/layout.css" />
 </head>
 <body>
   <header>
     <img src="images/logo.gif" alt="Jay Skript and the Domsters" />
-	<nav>
-	         <li><a href="index.html">Home</a></li>
+	<nav><ul>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="photos.html">Photos</a></li>
         <li><a href="Live.html">Live</a></li>
