--- a/项目1/contact.html
+++ b/项目1/contact.html
@@ -11,14 +11,15 @@
 <body>
   <header>
     <img src="images/logo.gif" alt="Jay Skript and the Domsters" />
-	<nav><ul>
+	<nav>
+       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="photos.html">Photos</a></li>
         <li><a href="Live.html">Live</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-             </nav>
+        </nav>
   </header>
   <article>
     <h1>Contact the band</h1>
